# ChangeLog for net-firewall/walloffire
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*walloffire-0.4 (26 Dec 2011)

  26 Dec 2011; Justin Lecher <jlec@gentoo.org> +walloffire-0.4.ebuild,
  metadata.xml:
  Version Bump