@@ -1,9 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX metadata.xml 360 SHA256 d10f0e802b5c8ffb5407cfdea2960b2a8de3c7861830f46002392b24885efed8 SHA512 fcfb734fdf8eabc0a1e6ff0986e8edc97a6ec9bfcf9feda7aca52c6d35e2082e000948314d246c43c3277feed4b63b6a628223c38018df41cbaa2e755e7cc929 WHIRLPOOL 12852acae6fcde575a4a7bdf79a1af8a70f07ca43272a7b467e3395e2ca4292fc8fd5cf7dc45fe9eb8065d7e4e453cdc28759d17d9029b5d120c16427f3c20f8
 DIST walloffire-0.1.tar.bz2 3449 SHA256 8e330d783dc46155921f7c613761e38c2b9d8bb02daaa9d50957818221b810c2
 DIST walloffire-0.2.tar.bz2 1771 SHA256 c34df45b53610dd0ac84e286bc3026bfcbbc9aa1961f5677284cf4206b48035e
 DIST walloffire-0.4.tar.xz 1612 SHA256 b1091e9332cf9113928e63da67e09fd2cb69bc82c7012673d0d1f6ff17c399d0 SHA512 d74bdf547c77d3031a2b1d3fc9136ea117c715e4b74798234a4e42971c29abee8ac0c846ad4ed83b88f7efcbea740218ba4c57f2e7abe4b22ee79fb3055f9fb3 WHIRLPOOL 2c6f983a70bc6a34e33d8dd90adbded0a3e334f1d2adb55811001357f5152093e1bf7269b2fa35acf4694a5f976bbef78496959de9c42f645ad3223250c171a9
 EBUILD walloffire-0.1.ebuild 1138 SHA256 3217a4daa748325c30f6df61870619099652d180a9f416ad636106fee009e42d SHA512 68fb1701b969510ec92cb82b444cb7e32a38148864d3b609685ebf24f551bdf33b942f48584208e1ecda9a47460f41022605661780f7376cc0edb9b2da6e5c31 WHIRLPOOL 068b51ccc41aa655b4d9fb65c7d5fc72d8d3b92793bc3f1b400d880679df179109833f588a5b5f94cfb813f359edec71ff913bb86b785ca3d04c9d2859d7dfef
 EBUILD walloffire-0.2.ebuild 862 SHA256 67d9caf0f8a771cc92d8092652d0ca1855650d5afafab8c61ce368f640a5efa7 SHA512 7c06557cc64e1e5d58e9a33fd57d3312d13860a0116f61d2ddab78e4f3f45093b4dd8001ea4d4e93b47e9b461b02045e85c0165837ef90350d1be5c713af9aa8 WHIRLPOOL dff4dcae24c9ea9dc7ff53467190028e749c15250603ec7387a610fc1f530642be6c9fe369bbde9c6f579850a4cc2b571192490e9e289351c196d5a5b0a9c2c5
+EBUILD walloffire-0.4-r1.ebuild 919 SHA256 078b97cf600eaccb58902f573f81c67655cb877b508ab85e1ed8620e697ba9c8 SHA512 0ee6e4fed17ae44c780504585bf2582a5fbda8b5cc0ac3a7647a28e0e5d4bbda164c713e8dbb9946c05121318ddbe793ddb9f8305590ca27b65e535765843c16 WHIRLPOOL c4509c468d535a195ee728ec24c6ada7780ca30abea210a44938daee80bc0da4bc41b5b2abc3c0e29463e866ca4c08f895e5d04f8273704bfa99e88b7bf195c0
 EBUILD walloffire-0.4.ebuild 830 SHA256 9f570298664146cd17fd2e2858af419c433357da43f5b18968be7247c3218592 SHA512 17f9595d88bbe6326cc74a925a1c861f59a3d1b7100fef5a574ad31f7040dcdbc20cbe1f60a2fa75a6e3f444addc07e5f0c58f3715b70611cea4ca82d41a1108 WHIRLPOOL b03ad21dd6397012726ed4d00f892d44d0f0e4431c254805ff1719d28ec57ff84d854c7171c5b2f72d091a746543c72a451e58ba2a87dd9ab58208efe7e459ff
-MISC ChangeLog 257 SHA256 66d4fd5f0b9a7d258e824de80c4ba05d40a8031b475a1487c31ae122f975e4c0 SHA512 b318e40da6c04ee41118c39ff66ea9be174c0d8a71f8599fd5b8947ea539b85cc5fe133bc763df2300d707041af7f27df501b04a15e21718fd9b34b8d2dca977 WHIRLPOOL 64b74802296d7bd371f6f586d73f6601f52801ba53ea010a62773e71baada9f49397ec2caebb470f0f47d4b74047a8ec1eb97e3e94fb0bdc66cd921f8c0780b8
-MISC metadata.xml 338 SHA256 e07be588554ad03a354bf9e733626f339c8cbed944dc0704f96e2116cf6e5b84 SHA512 44e06e4ccd854566eccb9245521325d57d87bcec86e145b2a09c6ebe8f3460ba6c850e44fe5a383468b627ee37bcb2240cd2ed38f056b44cc85cf9b8aa07e009 WHIRLPOOL 288fc586616302f2de24058ca341d1cb43e310ed99cd908657d82b281a72625e1d2a3b1f0a243ef94b0b29bdc846371e6746959f6ffd6e71487354a4cda1004a
+MISC ChangeLog 428 SHA256 84481d6b3cdd468f6d6e9a55c1d21402ddb68df20ac0ed5ae844ed2958a6a26c SHA512 70c490943e731e30a92d5be92ce0cf2f1e05a5d333a7687ddaa605c99419ff541babf8d8173a86fe019439dc2346531272dbf40c15639265976be41cdea3eac7 WHIRLPOOL f44c1b9e1459634f8846287a556385fac869d5f421b0eb86ee6c2d58dcef9221595ba822188b53b05b9b2cc9960f82b9990b8c0b2d18b051eb305ffcd763f75a
+MISC metadata.xml 337 SHA256 f2ae19508e9b020fb3c579ad2a1aa7a50148f54c9aff919e8fe0e62d527a8134 SHA512 b2a3ca56d4e952b0a067bc4c28877dc3c46b4d574a0e6bd4cd713a9134597aa1a9d6a851076b670c1ec22576502e92d57fe3758968f665e4a384b370b74fab4d WHIRLPOOL 90fc42ea2f4ee7537f24b2795850ce9e915a958d5e63e08a678401a501c445f660cca141fe5b21d545f0c51100ef6f216ccafe84df1e121bb3ed7e59cf580a6b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCJciIACgkQgAnW8HDreRY+9gCfTRbT9zI2fyFEy8wIrm/SIJ6k
+1yAAn3awei+1t245UqBhmNhn/Bnzd98V
+=dCKc
+-----END PGP SIGNATURE-----
