@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/walloffire
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*walloffire-0.4-r1 (25 Oct 2012)
+
+  25 Oct 2012; Justin Lecher <jlec@gentoo.org> +walloffire-0.4-r1.ebuild,
+  metadata.xml:
+  Add fix for latest net problems with openrc
 
 *walloffire-0.4 (26 Dec 2011)
 
